--- a/src/main/resources/static/shopHome.html
+++ b/src/main/resources/static/shopHome.html
@@ -70,7 +70,7 @@
 					<li class="nav-item me-3"><a class="nav-link"
 						href="/woof/frontend/member/login/membercenter.jsp"> <img
 							id="memberImage" src="/woof/webutil/icons/user2.svg"
-							style="width: 30px; border-radius: 50%" />
+							style="width: 30px; height:30px; border-radius: 50%" />
 							<p class="d-xl-none d-inline text-center mx-3">會員中心</p>
 					</a></li>
 
