--- a/src/main/resources/static/shopHome.html
+++ b/src/main/resources/static/shopHome.html
@@ -174,7 +174,7 @@
 						style="width: 100%; height: 600px;" frameborder="0"></iframe>
 				</div>
 				<div class="modal-footer">
-					<button type="button" class="btn btn-secondary"
+					<button type="button" class="btn btn-secondary" id="closeBtn"
 						data-bs-dismiss="modal">關閉</button>
 				</div>
 			</div>
@@ -263,9 +263,9 @@
 			</div>
 		</div>
 
-		
-		<script src="/woof/js/shopHome.js"></script>
-		<script src="/woof/js/cart.js"></script>
-		<script src="/woof/webutil/js/bootstrap.bundle.min.js"></script>
+	</footer>
+	<script src="/woof/js/shopHome.js"></script>
+	<script src="/woof/js/cart.js"></script>
+	<script src="/woof/webutil/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
